# StockPeek

./: .gitignore  README.md  pyproject.toml  requirements.txt  webscraper.py
stockpeek/: __init__.py  cli.py  fetcher.py  scraper.py
tests/: test_scraper.py
